csapp/mcr-cs-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
  labels:
    app: language-detection-service
    app.kubernetes.io/component: web
    app.kubernetes.io/instance: language-detection-service
    app.kubernetes.io/name: language-detection-service
    app.kubernetes.io/part-of: language-detection-service
    app.openshift.io/runtime: dotnet
  name: language-detection-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: language-detection-service
  template:
    metadata:
      labels:
        app: language-detection-service
    spec:
      containers:
        - name: language-detection-service
          image: >-
            image-registry.openshift-image-registry.svc:5000/argocd-demo/textanalytics-language:latest
          args:
            - eula=accept
            - apikey=6eb8de93b94e47d28626ec8961e53e08
            - 'billing=https://ta-container-demo.cognitiveservices.azure.com/'
          ports:
            - containerPort: 5000
              protocol: TCP
          securityContext:
            runAsUser: 0
