csapp/mcr-cs-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: language-detection-service
  labels:
    app: language-detection-service
    app.kubernetes.io/component: language-detection-service
    app.kubernetes.io/instance: language-detection-service
    app.kubernetes.io/part-of: language-detection-service
spec:
  ports:
    - name: 5000-tcp
      protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: language-detection-service
  type: ClusterIP
  sessionAffinity: None
