csapp/mcr-cs-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: language-detection-service
  labels:
    app: language-detection-service
    app.kubernetes.io/component: language-detection-service
    app.kubernetes.io/instance: language-detection-service
    app.kubernetes.io/part-of: language-detection-service
spec:
  to:
    kind: Service
    name: language-detection-service
    weight: 100
  port:
    targetPort: 5000-tcp
